Make sure date and time inputs don't become too narrow (refs #121)

--- a/app/pages/search/search-controls/search-controls.less
+++ b/app/pages/search/search-controls/search-controls.less
@@ -13,7 +13,7 @@
     }
 
     .date-picker {
-      width: 187px;
+      min-width: 138px;
       border: 2px solid @input-border;
       .input-size(@input-height-base; @padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @input-border-radius);
       background-color: #fff;
@@ -21,6 +21,10 @@
       input {
         padding: 0;
       }
+    }
+
+    .time-field {
+      min-width: 74px;
     }
   }
 
